--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <title>YBBooks</title>
-  </head>
-  <body>
-    <header>
-      <!-- если захочем сделать какой-то хедер/или удалим -->
-    </header>
-    <main>
-      <!-- основной код -->
-    </main>
-    <footer>
-      <!-- если руки дойдут до футера/или удалим -->
-    </footer>
-    <script src="app/main.js" type="module"></script>
-  </body>
+
+<head>
+   <meta charset="UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+   <link rel="stylesheet" href="/main.css">
+   <title>YBBooks</title>
+</head>
+
+<body>
+   <header>
+   </header>
+
+   <main>
+   </main>
+
+   <footer>
+   </footer>
+   <script src="app/main.js" type="module"></script>
+</body>
+
 </html>
